--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="app.css" />
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
         integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
@@ -43,7 +44,16 @@
 </head>
 
 <body>
-
+    <div class="modal" id="pin_form">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>Add a pin</p>
+            <input type="text" id="description">
+            <input type="text" id="tip_hint">
+            <input type="text" id="destination">
+            <button id="pin_button">Place pin</button>
+        </div>
+    </div>
     <div id='map'></div>
     <script src="index.js"></script>
 </body>
