--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
             <input type="text" id="description">
             <input type="text" id="tip_hint">
             <input type="text" id="destination">
+            <br>
+            <input type="file" id="upload" accept="image/*">
+            <img id="myImg" src="#" alt="Your image">
             <button id="pin_button">Place pin</button>
         </div>
     </div>
