modal closes when place pin button is clicked
Also added an event listener to show the picture the user is uploading
before they place the pin.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <input type="text" id="destination">
             <br>
             <input type="file" id="upload" accept="image/*">
-            <img id="myImg" src="#" alt="Your image">
+            <img id="myImg" src="#" alt="Your image" style="display: none;">
             <button id="pin_button">Place pin</button>
         </div>
     </div>
