--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <input type="text" id="destination">
             <br>
             <input type="file" id="upload" accept="image/*">
-            <img id="myImg" src="#" alt="Your image" style="display: none;">
+            <img id="myImg" src="#" alt="Your image" style="display: none; width: 300px;">
             <button id="pin_button">Place pin</button>
         </div>
     </div>
