recording controlled by a single button
removed button that plays a random song

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="modal" id="pin_form">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <p>Add a pin</p>
+            <h2>Add a pin</h2>
             <input type="text" id="description">
             <input type="text" id="tip_hint">
             <input type="text" id="destination">
@@ -58,16 +58,9 @@
             <input type="file" id="upload" accept="image/*">
             <img id="myImg" src="#" alt="Your image" style="display: none; width: 300px;">
             <button id="pin_button">Place pin</button>
-
-            <br>
-            <br>
-
-            <button id="record_button">Record </button>
-            <button id="stop_button" disabled>Stop </button>
+            <button id="record" class="record">Record</button>
             <br>
             <ol id= "recordingsList"> </ol>
-            <br>
-            <button id="audio_button">Play/Pause Audio</button>
 
         </div>
     </div>
