--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             import AudioRecorder from 'https://cdn.jsdelivr.net/npm/audio-recorder-polyfill/index.js';
             window.MediaRecorder = AudioRecorder;
         </script>
-
+    <script src="https://apis.google.com/js/platform.js" async defer></script> 
+    <meta name="google-signin-client_id" content="112249671211-bn9ns4deilhr4mc7ktb5fmamjc3h36nt.apps.googleusercontent.com">   
     <style>
         html,
         body {
@@ -50,6 +51,8 @@
 </head>
 
 <body>
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <a href="#" onclick="signOut();">Sign out</a>
     <div class="modal" id="pin_form">
         <div class="modal-content">
             <span class="close">&times;</span>
@@ -76,3 +79,6 @@
     <script src="index.js"></script>
 </body>
 </html>
+
+
+112249671211-bn9ns4deilhr4mc7ktb5fmamjc3h36nt.apps.googleusercontent.com
